- Change IDE from eclipse to netbean - update web.xml for performance - remove mailgun setting from default setting